csv_inspect2.txt
  File "<string>", line 22
    print(f'{road}: {len(ics)} ICs  -> first5: {[i[\
                                                  ^
SyntaxError: '[' was never closed
